[gd_scene load_steps=28 format=2]

[ext_resource path="res://scenes/Menu/MenuScene.gd" type="Script" id=1]
[ext_resource path="res://assets/game/white.png" type="Texture" id=2]
[ext_resource path="res://scenes/Menu/Bumper/BumperGrid.gd" type="Script" id=3]
[ext_resource path="res://scenes/Menu/Bumper/Bumper.gd" type="Script" id=4]
[ext_resource path="res://scenes/Menu/Menu/IntroBG.gd" type="Script" id=5]
[ext_resource path="res://scenes/Menu/Menu/Menu.gd" type="Script" id=6]
[ext_resource path="res://resources/Circle.gd" type="Script" id=7]
[ext_resource path="res://assets/fonts/custard.ttf" type="DynamicFontData" id=8]
[ext_resource path="res://resources/FilledRoundedRect.gd" type="Script" id=9]
[ext_resource path="res://resources/RoundedRect.gd" type="Script" id=10]
[ext_resource path="res://assets/menu/scroll.png" type="Texture" id=11]
[ext_resource path="res://scenes/Menu/Menu/Scroller.gd" type="Script" id=12]
[ext_resource path="res://scenes/Menu/Files/Files.gd" type="Script" id=13]
[ext_resource path="res://assets/fonts/rodin.ttf" type="DynamicFontData" id=14]
[ext_resource path="res://assets/fonts/kurokanestd.otf" type="DynamicFontData" id=15]

[sub_resource type="DynamicFont" id=1]
size = 96
font_data = ExtResource( 8 )

[sub_resource type="DynamicFont" id=2]
size = 36
font_data = ExtResource( 15 )

[sub_resource type="DynamicFont" id=3]
size = 24
font_data = ExtResource( 14 )

[sub_resource type="DynamicFont" id=4]
size = 32
font_data = ExtResource( 14 )

[sub_resource type="DynamicFont" id=5]
size = 18
font_data = ExtResource( 14 )

[sub_resource type="DynamicFont" id=6]
size = 12
font_data = ExtResource( 15 )

[sub_resource type="DynamicFont" id=7]
font_data = ExtResource( 14 )

[sub_resource type="DynamicFont" id=8]
size = 40
font_data = ExtResource( 15 )

[sub_resource type="DynamicFont" id=9]
size = 28
font_data = ExtResource( 14 )

[sub_resource type="DynamicFont" id=10]
size = 32
font_data = ExtResource( 14 )

[sub_resource type="DynamicFont" id=11]
size = 12
font_data = ExtResource( 14 )

[sub_resource type="DynamicFont" id=12]
size = 12
font_data = ExtResource( 14 )

[node name="Scene" type="Node2D"]
script = ExtResource( 1 )

[node name="Fade" type="Sprite" parent="."]
self_modulate = Color( 0, 0, 0, 0 )
position = Vector2( 320, 180 )
scale = Vector2( 640, 360 )
z_index = 100
texture = ExtResource( 2 )

[node name="Fade2" type="Sprite" parent="."]
self_modulate = Color( 1, 1, 1, 0 )
position = Vector2( 320, 180 )
scale = Vector2( 640, 360 )
z_index = 100
texture = ExtResource( 2 )

[node name="Tween" type="Tween" parent="."]

[node name="Bumper" type="Control" parent="."]
visible = false
margin_right = 640.0
margin_bottom = 360.0
rect_pivot_offset = Vector2( 320, 180 )
rect_clip_content = true
script = ExtResource( 4 )

[node name="BG" type="Node2D" parent="Bumper"]
position = Vector2( 320, 180 )
script = ExtResource( 3 )

[node name="Intro" type="Control" parent="."]
visible = false
margin_right = 640.0
margin_bottom = 360.0
rect_clip_content = true
script = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BG" type="Node2D" parent="Intro"]
self_modulate = Color( 0.916667, 0.75, 1, 1 )
z_as_relative = false
script = ExtResource( 5 )

[node name="R" type="Node2D" parent="Intro"]
position = Vector2( 200, 80 )
script = ExtResource( 7 )

[node name="White" type="Node2D" parent="Intro/R"]
z_index = 1
script = ExtResource( 7 )
size = 60
color = Color( 1, 1, 1, 1 )

[node name="Black" type="Node2D" parent="Intro/R"]
z_index = 2
script = ExtResource( 7 )
size = 56
color = Color( 0, 0, 0, 1 )

[node name="Node2D" type="Node2D" parent="Intro/R"]
z_index = 4

[node name="Label" type="Label" parent="Intro/R/Node2D"]
margin_left = -30.0
margin_top = -54.0
margin_right = 16.0
margin_bottom = 55.0
rect_scale = Vector2( 1.125, 1 )
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 1, 0.811765, 0.0745098, 1 )
text = "R"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="H" type="Node2D" parent="Intro"]
position = Vector2( 250, 90 )
script = ExtResource( 7 )
size = 56

[node name="White" type="Node2D" parent="Intro/H"]
z_index = 1
script = ExtResource( 7 )
size = 52
color = Color( 1, 1, 1, 1 )

[node name="Black" type="Node2D" parent="Intro/H"]
z_index = 2
script = ExtResource( 7 )
size = 48
color = Color( 0, 0, 0, 1 )

[node name="Node2D" type="Node2D" parent="Intro/H"]
z_index = 4

[node name="Label" type="Label" parent="Intro/H/Node2D"]
margin_left = -20.0
margin_top = -35.0
margin_right = 44.0
margin_bottom = 74.0
rect_scale = Vector2( 0.875, 0.75 )
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 1, 0.811765, 0.0745098, 1 )
text = "H"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Y" type="Node2D" parent="Intro"]
position = Vector2( 300, 85 )
script = ExtResource( 7 )
size = 56

[node name="White" type="Node2D" parent="Intro/Y"]
z_index = 1
script = ExtResource( 7 )
size = 52
color = Color( 1, 1, 1, 1 )

[node name="Black" type="Node2D" parent="Intro/Y"]
z_index = 2
script = ExtResource( 7 )
size = 48
color = Color( 0, 0, 0, 1 )

[node name="Node2D" type="Node2D" parent="Intro/Y"]
z_index = 4

[node name="Label" type="Label" parent="Intro/Y/Node2D"]
margin_left = -20.0
margin_top = -35.0
margin_right = 44.0
margin_bottom = 74.0
rect_scale = Vector2( 0.875, 0.75 )
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 1, 0.811765, 0.0745098, 1 )
text = "Y"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="T" type="Node2D" parent="Intro"]
position = Vector2( 350, 100 )
script = ExtResource( 7 )
size = 56

[node name="White" type="Node2D" parent="Intro/T"]
z_index = 1
script = ExtResource( 7 )
size = 52
color = Color( 1, 1, 1, 1 )

[node name="Black" type="Node2D" parent="Intro/T"]
z_index = 2
script = ExtResource( 7 )
size = 48
color = Color( 0, 0, 0, 1 )

[node name="Node2D" type="Node2D" parent="Intro/T"]
z_index = 4

[node name="Label" type="Label" parent="Intro/T/Node2D"]
margin_left = -20.0
margin_top = -35.0
margin_right = 44.0
margin_bottom = 74.0
rect_scale = Vector2( 0.875, 0.75 )
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 1, 0.811765, 0.0745098, 1 )
text = "T"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="H2" type="Node2D" parent="Intro"]
position = Vector2( 400, 90 )
script = ExtResource( 7 )
size = 56

[node name="White" type="Node2D" parent="Intro/H2"]
z_index = 1
script = ExtResource( 7 )
size = 52
color = Color( 1, 1, 1, 1 )

[node name="Black" type="Node2D" parent="Intro/H2"]
z_index = 2
script = ExtResource( 7 )
size = 48
color = Color( 0, 0, 0, 1 )

[node name="Node2D" type="Node2D" parent="Intro/H2"]
z_index = 4

[node name="Label" type="Label" parent="Intro/H2/Node2D"]
margin_left = -25.0
margin_top = -35.0
margin_right = 39.0
margin_bottom = 74.0
rect_scale = Vector2( 0.875, 0.75 )
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 1, 0.811765, 0.0745098, 1 )
text = "H"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="M" type="Node2D" parent="Intro"]
position = Vector2( 450, 105 )
script = ExtResource( 7 )
size = 56

[node name="White" type="Node2D" parent="Intro/M"]
z_index = 1
script = ExtResource( 7 )
size = 52
color = Color( 1, 1, 1, 1 )

[node name="Black" type="Node2D" parent="Intro/M"]
z_index = 2
script = ExtResource( 7 )
size = 48
color = Color( 0, 0, 0, 1 )

[node name="Node2D" type="Node2D" parent="Intro/M"]
z_index = 4

[node name="Label" type="Label" parent="Intro/M/Node2D"]
margin_left = -25.0
margin_top = -35.0
margin_right = 39.0
margin_bottom = 186.0
rect_scale = Vector2( 0.875, 0.75 )
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 1, 0.811765, 0.0745098, 1 )
text = "M
"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Net" type="Node2D" parent="Intro"]
position = Vector2( 176, 152 )
z_index = 4
script = ExtResource( 7 )
size = 30

[node name="Node2D" type="Node2D" parent="Intro/Net"]
z_index = 5

[node name="Label" type="Label" parent="Intro/Net/Node2D"]
margin_left = -15.0
margin_top = -18.0
margin_right = 129.0
margin_bottom = 31.0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "NET"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Net" type="Node2D" parent="Intro/Net"]
position = Vector2( 50, 0 )
z_index = 4
script = ExtResource( 7 )
size = 30

[node name="Sprite" type="Sprite" parent="Intro/Net"]
modulate = Color( 0, 1, 1, 1 )
position = Vector2( 0, -30 )
scale = Vector2( 50, 60 )
z_index = 4
texture = ExtResource( 2 )
centered = false

[node name="RichTextLabel" type="RichTextLabel" parent="Intro"]
margin_top = 168.0
margin_right = 640.0
margin_bottom = 208.0
rect_clip_content = false
custom_fonts/normal_font = SubResource( 3 )
bbcode_enabled = true
bbcode_text = "[wave amp=25][center]Press [img=24]res://assets/menu/aButton.png[/img] to start![/center][/wave]"
meta_underlined = false
text = "Press  to start!"
scroll_active = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Scroller" type="Sprite" parent="Intro"]
position = Vector2( 0, 260 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 11 )
centered = false
region_enabled = true
region_rect = Rect2( 0, 0, 3000, 200 )
script = ExtResource( 12 )

[node name="Files" type="Control" parent="."]
visible = false
margin_right = 640.0
margin_bottom = 360.0
rect_clip_content = true
script = ExtResource( 13 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BG" type="Node2D" parent="Files"]
self_modulate = Color( 0.916667, 0.75, 1, 1 )
z_as_relative = false
script = ExtResource( 5 )

[node name="Scroller" type="Node2D" parent="Files"]

[node name="Example" type="Node2D" parent="Files/Scroller"]
position = Vector2( 320, 80 )
z_index = 1
script = ExtResource( 10 )
size = Vector2( 400, 100 )
arcLength = 24

[node name="File" type="Node2D" parent="Files/Scroller/Example"]

[node name="Filename" type="Label" parent="Files/Scroller/Example/File"]
margin_left = -182.819
margin_top = -40.3615
margin_right = -25.8185
margin_bottom = -0.361504
custom_fonts/font = SubResource( 4 )
text = "New File"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Completion" type="Label" parent="Files/Scroller/Example/File"]
margin_left = 130.206
margin_top = -57.1087
margin_right = 184.206
margin_bottom = -17.1087
custom_fonts/font = SubResource( 5 )
text = "0%"
align = 2
valign = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Files/Scroller/Example/File"]
margin_left = -181.949
margin_top = -1.95664
margin_right = -15.9486
margin_bottom = 38.0434
custom_fonts/font = SubResource( 6 )
text = "RECENT GAMES"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Recents" type="Control" parent="Files/Scroller/Example/File"]
margin_left = -181.053
margin_top = 12.8531
margin_right = 170.947
margin_bottom = 36.8531
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Buttons" type="Node2D" parent="Files/Scroller/Example/File"]
visible = false
position = Vector2( 0, 90 )

[node name="2" type="Node2D" parent="Files/Scroller/Example/File/Buttons"]
script = ExtResource( 9 )
size = Vector2( 120, 40 )

[node name="Label" type="Label" parent="Files/Scroller/Example/File/Buttons/2"]
margin_left = -60.0
margin_top = -30.0
margin_right = 60.0
margin_bottom = 30.0
custom_fonts/font = SubResource( 7 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Play Game"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="1" type="Node2D" parent="Files/Scroller/Example/File/Buttons"]
position = Vector2( -140, 0 )
script = ExtResource( 9 )
size = Vector2( 120, 40 )

[node name="Label2" type="Label" parent="Files/Scroller/Example/File/Buttons/1"]
margin_left = -60.0
margin_top = -30.0
margin_right = 60.0
margin_bottom = 30.0
custom_fonts/font = SubResource( 7 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Rename File"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="3" type="Node2D" parent="Files/Scroller/Example/File/Buttons"]
position = Vector2( 140, 0 )
script = ExtResource( 9 )
size = Vector2( 120, 40 )

[node name="Label3" type="Label" parent="Files/Scroller/Example/File/Buttons/3"]
margin_left = -60.0
margin_top = -30.0
margin_right = 60.0
margin_bottom = 30.0
custom_fonts/font = SubResource( 7 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Delete File"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NewGame" type="Node2D" parent="Files/Scroller/Example"]
visible = false

[node name="Label" type="Label" parent="Files/Scroller/Example/NewGame"]
margin_left = -119.0
margin_top = -20.0
margin_right = 119.0
margin_bottom = 21.0
custom_fonts/font = SubResource( 8 )
text = "NEW FILE!"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Control" type="Node2D" parent="Files"]
position = Vector2( 42, 354 )
scale = Vector2( 0.75, 0.75 )
script = ExtResource( 9 )
size = Vector2( 176, 80 )
arcLength = 32

[node name="RichTextLabel" type="RichTextLabel" parent="Files/Control"]
modulate = Color( 0, 0, 0, 1 )
margin_left = -41.5
margin_top = -31.5
margin_right = 598.5
margin_bottom = 8.5
rect_clip_content = false
custom_fonts/normal_font = SubResource( 9 )
bbcode_enabled = true
bbcode_text = "[img=28]res://assets/menu/bButton.png[/img] Back"
meta_underlined = false
text = " Back"
scroll_active = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ScrollBar" type="Node2D" parent="Files"]
position = Vector2( 560, 180 )

[node name="1" type="Sprite" parent="Files/ScrollBar"]
rotation = 0.785398
scale = Vector2( 20, 20 )
texture = ExtResource( 2 )

[node name="2" type="Sprite" parent="Files/ScrollBar"]
visible = false
position = Vector2( 0, 30 )
rotation = 0.785398
scale = Vector2( 10, 10 )
texture = ExtResource( 2 )

[node name="3" type="Sprite" parent="Files/ScrollBar"]
visible = false
position = Vector2( 0, 60 )
rotation = 0.785398
scale = Vector2( 10, 10 )
texture = ExtResource( 2 )

[node name="4" type="Sprite" parent="Files/ScrollBar"]
visible = false
position = Vector2( 0, 90 )
rotation = 0.785398
scale = Vector2( 10, 10 )
texture = ExtResource( 2 )

[node name="5" type="Sprite" parent="Files/ScrollBar"]
visible = false
position = Vector2( 0, 120 )
rotation = 0.785398
scale = Vector2( 10, 10 )
texture = ExtResource( 2 )

[node name="6" type="Sprite" parent="Files/ScrollBar"]
visible = false
position = Vector2( 0, 150 )
rotation = 0.785398
scale = Vector2( 10, 10 )
texture = ExtResource( 2 )

[node name="7" type="Sprite" parent="Files/ScrollBar"]
visible = false
position = Vector2( 0, 180 )
rotation = 0.785398
scale = Vector2( 10, 10 )
texture = ExtResource( 2 )

[node name="8" type="Sprite" parent="Files/ScrollBar"]
visible = false
position = Vector2( 0, 210 )
rotation = 0.785398
scale = Vector2( 10, 10 )
texture = ExtResource( 2 )

[node name="9" type="Sprite" parent="Files/ScrollBar"]
visible = false
position = Vector2( 0, 240 )
rotation = 0.785398
scale = Vector2( 10, 10 )
texture = ExtResource( 2 )

[node name="10" type="Sprite" parent="Files/ScrollBar"]
visible = false
position = Vector2( 0, 270 )
rotation = 0.785398
scale = Vector2( 10, 10 )
texture = ExtResource( 2 )

[node name="Fade" type="Node2D" parent="Files"]
modulate = Color( 1, 1, 1, 0 )
z_index = 5

[node name="ColorRect" type="ColorRect" parent="Files/Fade"]
margin_right = 640.0
margin_bottom = 360.0
color = Color( 0, 0, 0, 0.784314 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Rename" type="Node2D" parent="Files/Fade"]
visible = false

[node name="FileName" type="Label" parent="Files/Fade/Rename"]
margin_top = 160.0
margin_right = 640.0
margin_bottom = 200.0
custom_fonts/font = SubResource( 10 )
text = "New File"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Files/Fade/Rename"]
margin_top = 135.0
margin_right = 640.0
margin_bottom = 175.0
custom_fonts/font = SubResource( 11 )
text = "Type in your new name!"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Delete" type="Node2D" parent="Files/Fade"]
visible = false

[node name="Beats" type="Label" parent="Files/Fade/Delete"]
margin_top = 160.0
margin_right = 640.0
margin_bottom = 200.0
custom_fonts/font = SubResource( 10 )
text = "8"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RichTextLabel" type="RichTextLabel" parent="Files/Fade/Delete"]
margin_top = 120.0
margin_right = 640.0
margin_bottom = 160.0
custom_fonts/normal_font = SubResource( 12 )
bbcode_enabled = true
bbcode_text = "[center]Are you sure you want to delete your save file?
Press [img=12]res://assets/menu/aButton.png[/img] to the beat to confirm your decision."
text = "Are you sure you want to delete your save file?
Press  to the beat to confirm your decision."

[node name="Tween" type="Tween" parent="Files"]
